[project]
name = "consent-audit"
version = "0.1.0"
description = "AI-driven dynamic audit framework for website consent interfaces"
authors = [{ name = "Qianyi (Alfred) Chen" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Browser automation
    "playwright>=1.48",
    # LLM / VLM clients
    "anthropic>=0.40",
    "openai>=1.55",
    # Data validation
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Storage
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "boto3>=1.35",
    # Image / perceptual hashing
    "pillow>=11.0",
    "imagehash>=4.3",
    # Text embeddings (local, cheap — no API)
    "sentence-transformers>=3.3",
    # Scheduling
    "apscheduler>=3.10",
    # CLI
    "typer>=0.13",
    "rich>=13.9",
    # Util
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "ruff>=0.8",
    "types-requests",
]

[project.scripts]
consent-audit = "consent_audit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/consent_audit"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["imagehash.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
